--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,2 @@
 @import "tailwindcss";
-@source '../../node_modules/swipe-menu-react/dist/**/*.{js,ts,jsx,tsx}';
+@source '../node_modules/swipe-menu-react/dist/**/*.{js,ts,jsx,tsx}';
